tdf#151912: sw: suppress exceptions during SDT evluation

Failure in XPath processing during retrieving fresh value from
data source is not a critical problem and should not cancel
document loading.

Just put warning in log and continue to eval further.

Change-Id: I76ecf0e0e227f46a270db3e77d86c19f7e9ad21a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142428
Tested-by: Jenkins
Reviewed-by: Vasily Melenchuk <vasily.melenchuk@cib.de>